--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                   value="50"
                   class="donation-input"
                   aria-describedby="donation-help"
+                  onkeypress="return event.charCode >= 48 && event.charCode <= 57"
                 />
               </div>
             </div>
